--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "eslint": "^6.3.0",
+    "eslint-config-react-app": "^5.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-slick": "^0.23.2",
-    "react-transition-group": "^3.0.0"
+    "react-transition-group": "^3.0.0",
+    "tsutils": "^3.17.1",
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
