--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "eject": "react-scripts eject",
     "test": "test --passWithNoTests"
   },
+  
+    "devDependencies": {
+      "chromedriver": "^2.27.3",
+      "selenium-webdriver": "^3.1.0"
+    },
+  
   "eslintConfig": {
     "extends": "react-app"
   },
