--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,23 @@
 language: node_js
+dist: trusty
+node_js:
+  - "8.14.1"
 
-
-matrix:
-  include:
-    - os: linux
-      node_js: '7'
-      sudo: required
-      env: DISPLAY=':99.0'
-      dist: trusty
-      addons:
-        apt:
-          sources:
-            - google-chrome
-          packages:
-            - google-chrome-stable
-    - os: osx
-      node_js: '7'
-      sudo: required
-      env: HOMEBREW_CASK_OPTS='--appdir=/Applications'
-
+addons:
+  chrome: stable
 before_install:
-  - |
-    if [ "$TRAVIS_OS_NAME" = "osx" ]; then
-      brew update > /dev/null
-      brew cask install google-chrome
-    fi
-install:
-  - npm install
+  - # start your web application and listen on `localhost`
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost
+
+
 
 before_script:
-  - |
-    if [ "$TRAVIS_OS_NAME" = "linux" ]; then
-      sh -e /etc/init.d/xvfb start
-    fi
-script:
-  - npm test
+  - export DISPLAY=:99.0
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+  - rackup  # start a Web server
+  - sleep 3 # give Web server some time to bind to sockets, etc
+  - chrome -v 
+
+
+
