--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
-    
+    ,"pretest":"npm  i"
+    ,"test": "node ./test.js"
   },
   
     "devDependencies": {
