--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
 before_script:
   - export DISPLAY=:99.0
   - "sh -e /etc/init.d/xvfb start"
-  - apt-get install  ruby-rack -y 
+  - sudo apt-get install  ruby-rack -y 
   - sleep 3 # give xvfb some time to start
   - rackup  # start a Web server
   - sleep 3 # give Web server some time to bind to sockets, etc
