--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
   chrome: stable
 before_install:
   - # start your web application and listen on `localhost`
-  # - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost
 
 
 
@@ -20,6 +20,6 @@ before_script:
   # - rackup  # start a Web server
   # - sleep 3 # give Web server some time to bind to sockets, etc
   # - chrome -v 
-
+      
 script: npm test
 
