--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,12 @@ addons:
   chrome: stable
 before_install:
   - # start your web application and listen on `localhost`
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost
+  # - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost
+  - wget http://chromedriver.storage.googleapis.com/2.24/chromedriver_linux64.zip
+  - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python2.7.12/bin/
+  - export CHROME_BIN=chromium-browser    
+  - PATH=$PATH:/home/travis/virtualenv/python2.7.12/bin/
+
 
 
 
@@ -20,6 +25,7 @@ before_script:
   # - rackup  # start a Web server
   # - sleep 3 # give Web server some time to bind to sockets, etc
   # - chrome -v 
-      
+  
+
 script: npm test
 
