--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,11 @@ before_install:
   - # start your web application and listen on `localhost`
   # - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost
   - wget http://chromedriver.storage.googleapis.com/2.24/chromedriver_linux64.zip
-  - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python2.7.12/bin/
-  - export CHROME_BIN=chromium-browser    
-  - PATH=$PATH:/home/travis/virtualenv/python2.7.12/bin/
+  - ls
+  - pwd
+  # - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python2.7.12/bin/
+  # - export CHROME_BIN=chromium-browser    
+  # - PATH=$PATH:/home/travis/virtualenv/python2.7.12/bin/
 
 
 
