--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
   chrome: stable
 before_install:
   - # start your web application and listen on `localhost`
-  # - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - wget http://chromedriver.storage.googleapis.com/2.24/chromedriver_linux64.zip
   - mkdir chromeData
   - unzip chromedriver_linux64.zip -d ./chromeData
