--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,14 @@ addons:
   chrome: stable
 before_install:
   - # start your web application and listen on `localhost`
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-  - wget http://chromedriver.storage.googleapis.com/2.24/chromedriver_linux64.zip
-  - mkdir chromeData
-  - unzip chromedriver_linux64.zip -d ./chromeData
-  - ls
-  - pwd
-  - export CHROME_BIN=chromium-browser    
-  - PATH=$PATH:/home/travis/build/lkamide/NBA-React/chromeData
+  # - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  # - wget http://chromedriver.storage.googleapis.com/2.24/chromedriver_linux64.zip
+  # - mkdir chromeData
+  # - unzip chromedriver_linux64.zip -d ./chromeData
+  # - ls
+  # - pwd
+  # - export CHROME_BIN=chromium-browser    
+  # - PATH=$PATH:/home/travis/build/lkamide/NBA-React/chromeData
 
 
 
@@ -27,7 +27,7 @@ before_script:
   # - sleep 3 # give xvfb some time to start
   # - rackup  # start a Web server
   # - sleep 3 # give Web server some time to bind to sockets, etc
-  # - chrome -v 
+  - chrome -v 
   
 
 script: npm test
