--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,25 @@ addons:
   # chrome: stable
 before_install:
   - # start your web application and listen on `localhost`
-  - google-chrome --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-  - wget http://chromedriver.storage.googleapis.com/73.0.3683.68/chromedriver_linux64.zip
-  - mkdir chromeData
-  - unzip chromedriver_linux64.zip -d ./chromeData
-  - ls
-  - pwd
-  - export CHROME_BIN=chromium-browser    
-  - PATH=$PATH:/home/travis/build/lkamide/NBA-React/chromeData
-  # -  google-chrome -v
-  - ls /
+  # - google-chrome --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  # - wget http://chromedriver.storage.googleapis.com/73.0.3683.68/chromedriver_linux64.zip
+  # - mkdir chromeData
+  # - unzip chromedriver_linux64.zip -d ./chromeData
+  # - ls
+  # - pwd
+  # - export CHROME_BIN=chromium-browser    
+  # - PATH=$PATH:/home/travis/build/lkamide/NBA-React/chromeData
+  # # -  google-chrome -v
+  # - ls /
+
+
+  install:
+  - npm install
+
+# Cache node_modules
+cache:
+  directories:   
+    - "node_modules"
 
 
 
@@ -31,5 +40,14 @@ before_script:
   # - chrome -v 
   
 
-script: npm test
+script: 
+    #npm test
+  # run unit tests
+  - npm test
+  # update Protractor and Selenium including ChromeDriver
+  - npm run webdriver-update
+  # launch Selenium standalone in the background
+  - npm run webdriver-start
+  # run Protractor E2E tests
+  - npm run ci-e2e
 
