--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject"
     ,"pretest":"npm  i"
-    ,"test": "node ./test.js"
+    ,"test": "node ./test.js",
+    "webdriver-start": "webdriver-manager start &",
+    "webdriver-update": "webdriver-manager update",
+    "protractor": "protractor",
+    "ci-e2e": "protractor --capabilities.chromeOptions.args=--headless --capabilities.chromeOptions.args=--no-sandbox protractor.conf.js"
   },
   
     "devDependencies": {
