--- a/.travis.yml
+++ b/.travis.yml
@@ -4,29 +4,37 @@ node_js:
   - "8.14.1"
 sudo: required
 
+
+
+
+env:
+  global:
+    - CXX=g++-4.8
+    - DISPLAY=:99.0
+    - CHROME_BIN=/usr/bin/google-chrome
+# installing Chrome for e2e tests
 addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+      - oracle-java9-set-default
+
+# addons:
   # chrome: stable
-before_install:
-  - # start your web application and listen on `localhost`
-  # - google-chrome --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-  # - wget http://chromedriver.storage.googleapis.com/73.0.3683.68/chromedriver_linux64.zip
-  # - mkdir chromeData
-  # - unzip chromedriver_linux64.zip -d ./chromeData
-  # - ls
-  # - pwd
-  # - export CHROME_BIN=chromium-browser    
-  # - PATH=$PATH:/home/travis/build/lkamide/NBA-React/chromeData
-  # # -  google-chrome -v
-  # - ls /
-
-
-  install:
-  - npm install
-
-# Cache node_modules
-cache:
-  directories:   
-    - "node_modules"
+# before_install:
+#   - # start your web application and listen on `localhost`
+#   - google-chrome --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+#   - wget http://chromedriver.storage.googleapis.com/73.0.3683.68/chromedriver_linux64.zip
+#   - mkdir chromeData
+#   - unzip chromedriver_linux64.zip -d ./chromeData
+#   - ls
+#   - pwd
+#   - export CHROME_BIN=chromium-browser    
+#   - PATH=$PATH:/home/travis/build/lkamide/NBA-React/chromeData
+#   # -  google-chrome -v
+#   - ls /
 
 
 
@@ -40,14 +48,11 @@ before_script:
   # - chrome -v 
   
 
-script: 
-    #npm test
-  # run unit tests
-  - npm test
-  # update Protractor and Selenium including ChromeDriver
-  - npm run webdriver-update
-  # launch Selenium standalone in the background
-  - npm run webdriver-start
-  # run Protractor E2E tests
-  - npm run ci-e2e
+script: npm test
 
+
+before_script:
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 #wait a while before xvfb to start
+after_script:
+  - "sh -e /etc/init.d/xvfb stop"
