--- a/.travis.yml
+++ b/.travis.yml
@@ -26,13 +26,13 @@ addons:
 # before_install:
 #   - # start your web application and listen on `localhost`
 #   - google-chrome --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-#   - wget http://chromedriver.storage.googleapis.com/73.0.3683.68/chromedriver_linux64.zip
-#   - mkdir chromeData
-#   - unzip chromedriver_linux64.zip -d ./chromeData
-#   - ls
+  - wget http://chromedriver.storage.googleapis.com/73.0.3683.68/chromedriver_linux64.zip
+  - mkdir chromeData
+  - unzip chromedriver_linux64.zip -d ./chromeData
+  # - ls
 #   - pwd
 #   - export CHROME_BIN=chromium-browser    
-#   - PATH=$PATH:/home/travis/build/lkamide/NBA-React/chromeData
+  - PATH=$PATH:/home/travis/build/lkamide/NBA-React/chromeData
 #   # -  google-chrome -v
 #   - ls /
 
