--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ sudo: required
 
 addons:
   chrome: stable
-# before_install:
+before_install:
 #   - # start your web application and listen on `localhost`
 #   - google-chrome --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - wget http://chromedriver.storage.googleapis.com/73.0.3683.68/chromedriver_linux64.zip
@@ -38,14 +38,14 @@ addons:
 
 
 
-before_script:
-  # - export DISPLAY=:99.0
-  # - "sh -e /etc/init.d/xvfb start"
-  # - sudo apt-get install  ruby-rack -y 
-  # - sleep 3 # give xvfb some time to start
-  # - rackup  # start a Web server
-  # - sleep 3 # give Web server some time to bind to sockets, etc
-  # - chrome -v 
+# before_script:
+#   # - export DISPLAY=:99.0
+#   # - "sh -e /etc/init.d/xvfb start"
+#   # - sudo apt-get install  ruby-rack -y 
+#   # - sleep 3 # give xvfb some time to start
+#   # - rackup  # start a Web server
+#   # - sleep 3 # give Web server some time to bind to sockets, etc
+#   # - chrome -v 
   
 before_script:
   - "sh -e /etc/init.d/xvfb start"
