--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,10 @@ sudo: required
 
 addons:
   chrome: stable
-  
+
 before_install:
 #   - # start your web application and listen on `localhost`
-#   - google-chrome --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  - google-chrome --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - wget http://chromedriver.storage.googleapis.com/73.0.3683.68/chromedriver_linux64.zip
   - mkdir chromeData
   - unzip chromedriver_linux64.zip -d ./chromeData
