--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
-
+    ,"pretest":"npm  i"
     ,"test": "node ./test.js",
     "webdriver-start": "webdriver-manager start &",
     "webdriver-update": "webdriver-manager update",
