--- a/.travis.yml
+++ b/.travis.yml
@@ -21,15 +21,8 @@ sudo: required
 #       - google-chrome-stable
 #       - oracle-java9-set-default
 
-# addons:
-#   chrome: stable
-
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+  chrome: stable
 
 before_install:
 #   - # start your web application and listen on `localhost`
@@ -40,11 +33,12 @@ before_install:
   # - ls
 #   - pwd
 #   - export CHROME_BIN=chromium-browser    
-  - PATH=$PATH:/home/travis/build/lkamide/NBA-React/chromeData
-  - echo $PATH
+  -  PATH=$PATH:/home/travis/build/lkamide/NBA-React/chromeData
+  -  echo $PATH
   -  google-chrome --version
-  # - sudo apt-get install google-chrome-stable
-  # -  google-chrome --version
+  -  sudo apt-get update -y 
+  -  sudo apt-get upgrade -y 
+  -  google-chrome --version
 
 #   - ls /
 
