--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,8 @@ before_install:
   -  echo $PATH
   -  google-chrome --version
   -  sudo apt-get update -y 
-  -  sudo apt-get upgrade -y 
+  -  sudo apt-get install google-chrome-stable
+  # -  sudo apt-get upgrade -y 
   -  google-chrome --version
 
 #   - ls /
