--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 dist: trusty
 node_js:
   - "8.14.1"
-sudo: false
+sudo: required
 
 # os: osx
 
@@ -21,8 +21,8 @@ sudo: false
 #       - google-chrome-stable
 #       - oracle-java9-set-default
 
-addons:
-  chrome: beta
+# addons:
+#   chrome: beta
 
 
 before_install:
