--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ sudo: required
 before_install:
 #   - # start your web application and listen on `localhost`
   - google-chrome --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-  - wget http://chromedriver.storage.googleapis.com/74.0.3729.6/chromedriver_linux64.zip
+  - wget https://chromedriver.storage.googleapis.com/78.0.3904.11/chromedriver_linux64.zip
   - mkdir chromeData
   - unzip chromedriver_linux64.zip -d ./chromeData
   # - ls
