Chrome test chrome version - upgrade

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_install:
 #   -  PATH=$PATH:/home/travis/build/lkamide/NBA-React/chromeData
 #   -  echo $PATH
   -  google-chrome --version
-  -  google-chorme-stable --version
+  # -  google-chorme-stable --version
 #   -  sudo apt-get update -y 
 #   # -  sudo apt-get install google-chrome-stable
 #   # -  sudo apt-get upgrade -y 
